# acme-project-create

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  index.html  objects.inv  pyproject.toml  requirements.txt
.claude/commands/: create-project.md
.github/: copilot-instructions.md
.github/agents/: create-new-project.agent.md
.github/workflows/: publish.yml  release.yml  test.yml
api/: index.html
architecture/: index.html
cheat_sheet/: index.html
docs/: mkdocs.yml
docs/docs/: api.md  index.md  install.md
features/: index.html
glossary/: index.html
guides/: index.html
install/: index.html
release_notes/: index.html
src/acme_project_create/: __init__.py  _main.py  main.py  test_a.py  test_b.py
src/acme_project_create/template/{{project_name}}/: .gitignore  .pre-commit-config.yaml  .python-version  CLAUDE.md.j2template  CONTRIBUTING.md.j2template  Dockerfile.j2template  README.md.j2template  env.manifest  justfile.j2template  pyproject.toml.j2template  upgrade_env.sh
src/acme_project_create/template/{{project_name}}/.github/: copilot-instructions.md
src/acme_project_create/template/{{project_name}}/admin/: README.md  clean.sh  format.sh  lint.sh  test.sh  update-gitignore.sh
src/acme_project_create/template_uv/{{project_name}}/: .gitignore  pyproject.toml.j2template
tests/acme_project_create/: test_main.py
tests/acme_project_create/template_dirname/: template_manifest.py
tests/acme_project_create/template_j2template/: myfile.py.j2template  template_manifest.py
(+37 files in other folders)
