[build-system]
requires = [ "setuptools>=46.4.0", "wheel>=0.36.2"]
build-backend = "setuptools.build_meta"

[project]
name = "acme_project_create"
version = "0.0.1"
description = "Sets up a new (python) project using a template"
readme = "README.md"
classifiers = [ "Programming Language :: Python :: 3.9", ]
dependencies = [ "Jinja2" ]

[[project.authors]]
email = "guner.stan@gmail.com"

[project.scripts]
apc = "acme_project_create.main:main"

[project.urls]
homepage = "https://example.com"
repository = "https://example.com"

[project.optional-dependencies]
dev = [
    "pytest", # for testing
    "build", # for building python packages
    "mkdocs", # for documentation
    "mkdocs-material", # theme for mkdocs
    "mkdocstrings[python]" # mkdocs plugin to generate API docs from sources
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["acme_project_create"]
[tool.setuptools.package-data]
acme_project_create = ["template/**"]